# bq-flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture-diagram.html  main.py  pyproject.toml  startup.sh  survey.txt
bq_flow_onboarding/: README-ONBORD.md  app.py  run.sh
bq_flow_onboarding/core/: ai_assistant.py  bigquery_client.py  embeddings.py  logger.py  profiler.py
bq_flow_onboarding/profiles/: crypto_bitcoin_profile.json  crypto_bitcoin_selection.json  crypto_ethereum_profile.json  crypto_ethereum_selection.json  google_trends_profile.json  google_trends_selection.json  hackernews_profile.json  hackernews_selection.json  stackoverflow_profile.json  stackoverflow_selection.json  thelook_ecommerce_profile.json  thelook_ecommerce_selection.json  usa_names_profile.json  usa_names_selection.json
bq_flow_onboarding/sql/: 01_create_tables.sql  02_create_model_and_index.sql
config/: config.yaml  databases.yaml
docs/: BENCHMARKING_STRATEGY.md  BIGQUERY_AI_HACKATHON_SUBMISSION.md
src/: __init__.py
src/api/: __init__.py  rest_api.py
src/core/: __init__.py  bigquery_ai.py  bigquery_ai_forecast.py  bigquery_ai_generate_table.py  config.py  logging.py  retry_utils.py  utils.py
src/ui/: __init__.py  chainlit.md  chainlit_app.py  chainlit_logging.py
src/ui/.chainlit/: config.toml
src/utils/: sql_template.py
src/websocket/: __init__.py  connection_manager.py  progress_tracker.py  streaming_processor.py  streaming_server.py
