[tool.poetry]
name = "bq-flow"
version = "5.4"
description = "Natural Language to Predictive Insights"
authors = ["Shivam Bhardwaj"]
readme = "README.md"
package-mode = true
packages = [
    { include = "src" },
    { include = "bq_flow_onboarding" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
streamlit = ">=1.49.1,<2.0.0"
google-cloud-bigquery = ">=3.37.0,<4.0.0"
google-cloud-aiplatform = ">=1.113.0,<2.0.0"
pandas = ">=2.3.2,<3.0.0"
plotly = ">=6.3.0,<7.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
db-dtypes = ">=1.4.3,<2.0.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
requests = ">=2.32.5,<3.0.0"
chainlit = ">=2.8.0,<3.0.0"
tabulate = ">=0.9.0,<0.10.0"
httpx = ">=0.28.1,<0.29.0"
pandas-gbq = ">=0.29.2,<0.30.0"
websockets = ">=15.0.1,<16.0.0"
google-cloud-bigquery-storage = ">=2.33.1,<3.0.0"
watchdog = "^6.0.0"
pyarrow = "^21.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"